--- a/style.css
+++ b/style.css
@@ -95,3 +95,20 @@ p a:hover {
     margin-bottom: 20px;
 }
 
+h1 {
+    font-size: 16px;
+}
+
+span {
+    color: #007bff;
+}
+
+.box p {
+    font-size: 22px;
+}
+
+.box button {
+    display: block;
+    width: 300px;
+    margin: 0 auto;
+}
