--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to right, #e2e2e2, #e2e2e2);
+    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
     color:#333;
 }
 
